--- a/index.html
+++ b/index.html
@@ -7,77 +7,98 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta name="keywords" content="gera, georgiy, cv, resume">
     <meta name="description" content="Этот сайт - резюме Георгия Александровича">
+    <link rel="stylesheet" href="styles.css">
     <title>Georgiy Resume</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="info">
 
-    <img src="imgs/me.png" width="200" alt="Моё">
+            <img class="avatar" src="imgs/me.png" alt="Моё">
 
-    <h1>Георгий Кутасов</h1>
+            <div class="info-text">
+                <h1>Георгий Кутасов</h1>
 
-    <p>Я <strong>студент-программист</strong> колледжа <strong>НРТК</strong></p>
+                <p>Я студент <strong>Нижегородского радиотехнического колледжа</strong></p>
 
-    <p>Я люблю <em>творить, изучать и программировать</em></p>
+                <p>Я люблю <em>творить, учиться новому и программировать</em></p>
 
-    <h4>Список социальных сетей:</h4>
+                <h4>Список социальных сетей:</h4>
 
-    <p>
-        <a href="https://vk.com/id198567365" target="_blank">ВКонтакте</a>
-        |
-        <a href="https://t.me/O3124000a" target="_blank">Telegram</a>
-        |
-        <a href="https://github.com/LastChanse" target="_blank">GitHub</a>
-    </p>
-
-    <h2>Мои хобби:</h2>
-
-    <ol>
-        <li>Игра на пианино</li>
-        <li>Рисование</li>
-        <li>Видео монтаж</li>
-        <li>Написание музыки</li>
-    </ol>
-
-    <h2>Опыт работы:</h2>
-
-    <table>
-        <thead>
-            <th>Название</th>
-            <th>Должность</th>
-            <th>Год</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>ООО "ИННОВАЦИЯ СТРОЙ"</td>
-                <td>Intern</td>
-                <td>2021-сейчас</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>Связаться со мной</h2>
-
-    <form action="/">
-        <div>
-            <label for="name">Ваше имя:</label>
-            <input type="text" placeholder="Введите имя">
+                <a href="https://vk.com/id198567365" target="_blank">ВКонтакте</a>
+                |
+                <a href="https://t.me/O3124000a" target="_blank">Telegram</a>
+                |
+                <a href="https://github.com/LastChanse" target="_blank">GitHub</a>
+            </div>
         </div>
 
-        <div>
-            <label for="email">Ваш email:</label>
-            <input type="email" placeholder="Введите email">
+        <div class="card bg-green">
+            <h2>Мои хобби:</h2>
+
+            <ol class="list">
+                <li>Игра на пианино</li>
+                <li>Рисование</li>
+                <li>Видео монтаж</li>
+                <li>Написание музыки</li>
+            </ol>
         </div>
 
-        <div>
-            <label for="message">Ваше сообщение:</label>
-            <br>
-            <textarea id="message" placeholder="Введите сообщение..." cols="20" rows="5"></textarea>
+        <div class="card bg-red">
+            <h2>Опыт работы:</h2>
+
+            <table class="table">
+                <thead>
+                    <th>Название</th>
+                    <th>Должность</th>
+                    <th>Год</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ООО "ИННОВАЦИЯ СТРОЙ"</td>
+                        <td>Intern</td>
+                        <td>2021-сейчас</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        
-        <input type="submit" value="Отправить!">
-        
-    </form>
+
+        <div class="card bg-yellow">
+            <h2>Мои навыки</h2>
+
+            <ul class="link-list">
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+            </ul>
+        </div>
+
+        <form action="/" class="form">
+            <h2>Связаться со мной</h2>
+
+            <div class="form-row">
+
+                <div class="form-group">
+                    <label for="name">Ваше имя:</label>
+                    <input type="text" placeholder="Введите имя">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input type="email" placeholder="Введите email">
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label for="message">Ваше сообщение:</label>
+                <textarea id="message" placeholder="Введите сообщение..." cols="20" rows="5"></textarea>
+            </div>
+
+            <input class="btn" type="submit" value="Отправить!">
+
+        </form>
+    </div>
 </body>
 
 </html>
